2024-09-13 Primera version de inventario.

--- a/CódigoFuente/BitacorasProduccion/Content/css/HansontableHeaderColors.css
+++ b/CódigoFuente/BitacorasProduccion/Content/css/HansontableHeaderColors.css
@@ -29,6 +29,10 @@
     background: #355eff;
     color: white;
 }
+.handsontable THEAD TH.HTthyssen {
+    background: #009ff5;
+    color: white;
+}
 
 .handsontable THEAD TH.HTPurple {
     background: #5920fe;
