--- a/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/carga_tolerancias.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/carga_tolerancias.cshtml
@@ -1,21 +1,25 @@
 ﻿
-@model Portal_2_0.Models.ExcelViewModel
+@model Portal_2_0.Models.ExcelViewInventarioSAPModel
 
 @{
     ViewBag.Title = "Carga Tolerancias SAP";
     ViewBag.PrimerNivel = "ci_conteo_inventario";
     ViewBag.SegundoNivel = "ci_conteo_inventario_sap";
     ViewBag.ControllerName = ViewContext.RouteData.Values["controller"];
+    ViewBag.nav_style = "nav-sm";
 
 }
-
-
+@section estilos
+{
+    <!-- Select2 -->
+    <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+}
 
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.Title</h3>
             </div>
         </div>
 
@@ -39,10 +43,25 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="card-box ">
+                                    <div class="alert alert-info" role="alert">
+                                        <b style="color:snow; font-size:larger"><u>INFORMACIÓN</u></b> <br />
+                                        <ul style="font-size:15px;">
+                                            <li>Cargue el archivo de tolerencias cuando se haya cargado el archivo de inventario.</li>
+                                            <li>Asegurese de que se renombró la columna "Gauge MIN" y "Gauge Max", como muestra la siguiente imagen.</li>
+
+                                        </ul>
+                                    </div>
+                                    <p>Imagen de referencia:</p>
+                                    <img src="~/Content/images/ejemplo_columnas_espesores.PNG" />
+                                    <br />
+                                    <br />
+                                    <br />
+                                    <hr />
                                     <div class="form-group">
                                         @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal" }))
                                         {
                                             @Html.AntiForgeryToken()
+                                            <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
 
                                             if (!Html.ViewData.ModelState.IsValid)
                                             {
@@ -52,18 +71,19 @@
                                             }
 
                                             <div class="form-group row">
-                                                @Html.LabelFor(m => m.PostedFile, new { @class = "col-sm-2 col-form-label" })
-                                                <div class="col-sm-10">
+                                                <label class="control-label col-md-1 label-align">Archivo </label>
+                                                <div class="col-md-4">
+
                                                     <div class="input-group">
                                                         <div class="custom-file">
-                                                            @Html.TextBoxFor(m => m.PostedFile, new { type = "file", @accept = ".xls,.xlsx" })
-                                                           
+                                                            @Html.TextBoxFor(m => m.PostedFile, new { @class = "custom-file-input", type = "file" })
+                                                            <label class="custom-file-label" for="PostedFileSolicitud_1" style="text-align:left" data-browse="Seleccionar">Seleccione un archivo...</label>
                                                         </div>
                                                     </div>
                                                     @Html.ValidationMessageFor(m => m.PostedFile, "", new { @class = "text-danger" })
                                                 </div>
-
                                             </div>
+                                            <hr />
                                             <div class="form-group">
                                                 <div>
                                                     <input type="submit" value="Cargar archivo" class="btn btn-success float-lg-left" />
@@ -72,12 +92,12 @@
                                         }
 
                                     </div>
-                                 
+
 
                                 </div>
-                              
+
                             </div>
-                            
+
 
 
                         </div>
@@ -88,4 +108,30 @@
     </div>
 </div>
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 
+    @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
+
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+    <script>
+        //variable para saber si ha cambiado el formulario y asi no se detenga por doble submit
+        var documento_soporte_cambios = 1;
+
+        $(document).ready(function () {
+            // Initialize Select2 Elements (debe ir después de asignar el valor)
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            })
+
+            //inicializa en input file
+            bsCustomFileInput.init()
+
+            //aumenta en uso cada vez que se hace un cambio en el archivo de soporte
+            $(".custom-file-input").on("change", function () {
+                document.getElementById('cambio_documento_soporte').value = ++documento_soporte_cambios;
+            });
+
+        });
+    </script>
+}
