--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -903,6 +903,8 @@
                                             <a><i class="fa fa-boxes-stacked"></i> Inventario <span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "ci_conteo_inventario" ? "display:block" : null )">
                                                 <li class="@(ViewBag.SegundoNivel == "ci_conteo" ? "current-page" : null )"><a href="@Url.Action( "Index", "CI_conteo_inventario")">Listado</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "ci_conteo" ? "current-page" : null )"><a href="@Url.Action( "Inventario", "CI_conteo_inventario", new {planta_sap = "5190"})">Inventario - (5190) PUEBLA</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "ci_conteo" ? "current-page" : null )"><a href="@Url.Action( "Inventario", "CI_conteo_inventario", new {planta_sap = "5390"})">Inventario - (5390) Silao</a></li>
                                                 @if (User.IsInRole(TipoRoles.CI_CONTEO_INVENTARIO_ADMIN))
                                                 {
                                                     <h3>Carga Archivos</h3>
