2024-09-13 Se modifica validacion de planicidad y puntas y colas.

--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
@@ -1683,7 +1683,7 @@
                             case GetColFromName("Tolerancia avance negativa (mm)"): //4 decimales
                             case GetColFromName("Tolerancia avance positiva (mm)"): //4 decimales
                             case GetColFromName("Pzas por Golpe"): //0 decimales
-                            case GetColFromName("Pzas por paquete"): //0 decimales
+                            //case GetColFromName("Pzas por paquete"): //0 decimales
                             case GetColFromName("Piezas por auto"): //0 decimales
                             case GetColFromName("Peso Bruto (KG)"): //3 decimales
                             case GetColFromName("Peso Neto (KG)"): //3 decimales
