--- a/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/carga_inventario_sap.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/carga_inventario_sap.cshtml
@@ -8,6 +8,8 @@
     ViewBag.ControllerName = ViewContext.RouteData.Values["controller"];
     ViewBag.nav_style = "nav-sm";
 
+
+
 }
 @section estilos
 {
@@ -57,6 +59,7 @@
                                         @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal" }))
                                         {
                                             @Html.AntiForgeryToken()
+                                            <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
                                             <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
 
 
