2024-09-25 Se realizan cambios en Conteo Inventario.

--- a/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/Inventario.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CI_conteo_inventario/Inventario.cshtml
@@ -532,7 +532,7 @@
                 { readOnly: true, className: "htRight" }, //Piezas MAX sum
                 { readOnly: true, className: 'bold-cell htRight' }, //Cantidad Teórica
                 { readOnly: true, className: "htRight" }, //Diferencia SAP
-                { readOnly: true, className: "htRight" }, //Validación
+                { readOnly: false, className: "htRight" }, //Validación
                 { readOnly: true, className: 'htMiddle', renderer: "html" },
                 { readOnly: true, className: "htRight" }, //cambio
 
